log
Thu 05 Oct 2023 04:39:06 PM UTC: 
 tests:  0|5
total_score: 0/70
37e166c
Thu 05 Oct 2023 04:48:12 PM UTC: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:33: error: assignment to ‘int’ from ‘Node *’ makes integer from pointer without a cast [-Werror=int-conversion]
   64 |           adNodo->sudo[fil][col]=n;
      |                                 ^
cc1: all warnings being treated as errors
Compilation failed
78d98b5
Thu 05 Oct 2023 04:48:19 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
abb1c61
Thu 05 Oct 2023 04:56:38 PM UTC: 
 sudoku.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f726e21
Thu 05 Oct 2023 04:56:49 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:76:3: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   76 |   return;
      |   ^~~~~~
sudoku.c:46:5: note: declared here
   46 | int is_valid(Node* n){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
34aa55b
Thu 05 Oct 2023 04:56:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2d9343f
Thu 05 Oct 2023 04:57:00 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
30fd40b
Thu 05 Oct 2023 04:57:36 PM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
0b1a7d4
Thu 05 Oct 2023 04:59:50 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
ec70604
Thu 05 Oct 2023 05:02:19 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
78e7289
Thu 05 Oct 2023 05:02:47 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8d0fb2a
Thu 05 Oct 2023 06:50:48 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
85502e2
Thu 05 Oct 2023 06:57:17 PM UTC: 
 sudoku.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
00e88fa
